--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
     "react/": "https://esm.sh/react@^19.2.4/",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "express": "https://esm.sh/express@^5.2.1",
+    "axios": "https://esm.sh/axios@^1.13.4",
+    "crypto": "https://esm.sh/crypto@^1.0.1",
+    "cors": "https://esm.sh/cors@^2.8.6",
+    "ws": "https://esm.sh/ws@^8.19.0"
   }
 }
 </script>
