--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     "axios": "https://esm.sh/axios@^1.13.4",
     "crypto": "https://esm.sh/crypto@^1.0.1",
     "cors": "https://esm.sh/cors@^2.8.6",
-    "ws": "https://esm.sh/ws@^8.19.0"
+    "ws": "https://esm.sh/ws@^8.19.0",
+    "fs": "https://esm.sh/fs@^0.0.1-security",
+    "readline": "https://esm.sh/readline@^1.3.0"
   }
 }
 </script>
